--- a/css/global.css
+++ b/css/global.css
@@ -551,3 +551,8 @@ div[class*="-form"] {
 .align-center {
     text-align: center;
 }
+
+.form-group.required label:after {
+  content:" *";
+  color:red;
+}
