--- a/css/global.css
+++ b/css/global.css
@@ -526,12 +526,9 @@ div[class*="-form"] {
 */
 
 .dashboard {
-    /*
     position: fixed;
-    top: 18px;
-    right: 18px;
-    */
-    margin-top: 18px;
+    top: 0;
+    right: 0;
     z-index: 99999;
 }
 
