--- a/css/global.css
+++ b/css/global.css
@@ -532,6 +532,14 @@ div[class*="-form"] {
     z-index: 99999;
 }
 
+.alerts-button {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+
+}
+
 @media (min-width: 762px) {
     .container {
         width: 762px;
