--- a/css/global.css
+++ b/css/global.css
@@ -18,7 +18,6 @@
 
 .app-title {
     font-size: 24px;
-    padding-top: 18px;
     color: #44BBEE;
 }
 
@@ -198,6 +197,38 @@ body {
     background-color: #f8f8f8;
 }
 
+.areas-group {
+    position: absolute;
+    top: 200px;
+    left: 18px;
+    right: 18px;
+}
+
+#shops-table {
+    margin-top: 10px;
+}
+.shops-container {
+    text-align: center;
+}
+
+.slider {
+    position: absolute;
+    bottom: 18px;
+    left: 3px;
+    right: 3px;
+    background-color: rgba(255,255,255,0.6);
+
+}
+
+.slider div img {
+    background-color: #f8f8f8;
+}
+
+.shop-logo-slider{
+    height: 60px;
+    margin: 10px;
+}
+
 #dashboard-table {
     background-color: #44BBEE;
     margin-bottom: 18px;
@@ -231,7 +262,6 @@ body {
 }
 
 .app-title {
-    padding: 10px;
     font-weight: bold;
 }
 
@@ -450,8 +480,13 @@ input[type=range]:focus::-ms-fill-upper {
 .copyright {
     font-size: 12px;
     color: #888;
+    text-align: center;
+    background-color: #fff;
+    position: absolute;
+    margin-right: 12px;
+    bottom: 0;
+    padding: 3px;
 }
-
 .copyright span.iyabasira {
     color: #44BBEE;
 }
