Added new smaller banner immage

--- a/css/global.css
+++ b/css/global.css
@@ -633,7 +633,7 @@ div[class*="-form"] {
 }
 
 .splash {
-    background: url('/img/banner.png') 50% no-repeat;
+    background: url('/img/rsz_banner.jpg') 50% no-repeat;
     background-size: contain;
     position: absolute;
     margin: 0;
